@@ -1,2 +1,7 @@
+<<<<<<< HEAD
 export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
 export JAVA_TOOL_OPTIONS="-Xmx1024m -XX:MaxPermSize=512m -Xms512m"
+=======
+export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=1024m"
+export JAVA_TOOL_OPTIONS="-Xmx2048m -XX:MaxPermSize=1024m -Xms1024m"
+>>>>>>> 6ab8241fdb1d1ab371de77dd68da96fa5d4a31e2
